# pylint-flectra

./: CONTRIBUTING.md  CREDITS  ChangeLog  README.rst  setup.cfg  setup.py  tox.ini
pylint_flectra/: __init__.py  misc.py  settings.py
pylint_flectra/checkers/: __init__.py  format.py  modules_flectra.py  no_modules.py
pylint_flectra/examples/: .jslintrc
pylint_flectra/test/: main.py
pylint_flectra/test_repo/broken_module/: __openerp__.py  broken_example2.js  exercise.txt  model_view_flectra.xml  model_view_flectra2.xml  report.xml  skip_file_not_used.xml  skip_xml_check.xml  skip_xml_check_3.xml  xml_syntax_error.XML
pylint_flectra/test_repo/broken_module/demo/: duplicated_id_demo.xml
pylint_flectra/test_repo/broken_module/models/: broken_model.py
pylint_flectra/test_repo/broken_module/report/: test_report.xml
pylint_flectra/test_repo/broken_module/tests/: xml_not_important_0.xml  xml_not_important_1.xml  xml_not_important_3.xml  xml_not_important_4.xml
pylint_flectra/test_repo/broken_module2/: __openerp__.py
pylint_flectra/test_repo/broken_module2/tests/data/: flectra_data_noupdate_0.xml  flectra_data_noupdate_1.xml
pylint_flectra/test_repo/broken_module3/: __openerp__.py
pylint_flectra/test_repo/test_module/: website_templates.xml
