[metadata]
name = pylint-flectra
author = Odoo Community Association (OCA)
author_email = support@flectra-community.org, FlectraHQ
summary = Pylint plugin for Flectra
license = APGL3
home_page = https://github.com/OCA/pylint-flectra
description-file =
    README.rst
    ChangeLog
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    pylint_flectra
